--- a/templates/addstudent.html
+++ b/templates/addstudent.html
@@ -18,7 +18,7 @@
                                                 <div class="row">
                         <div class="col-md-5">
                             <div class="form-group">
-                                <label>Collage</label>
+                                <label>College</label>
                                 <input type="text" class="form-control border-input" disabled="" placeholder="Sri Krishna Institute of Technology" value="Sri Krishna Institute of Technology.">
                             </div>
                         </div>
@@ -79,7 +79,8 @@
                                         <option value="1">1</option>
                                                    <option value="3">3</option>
                                                    <option value="5">5</option>
-                                                   <option value="7">7</option> 
+                                                   <option value="7">7</option>
+                                                   <option value="8">8</option> 
                                                    </select>
                             </div>
                         </div>
@@ -153,6 +154,7 @@
                     <div class="col-sm">
                                     <div class="col-md-3">
                                             <div class="form-group">
+                                                <div class="card">
                                                     <div class="card card-user">
                                                             <div class="image">
                                                             </div>
@@ -185,7 +187,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                        </div>
+                                                        </div></div>
                                             </div>
                                         </div>         
                                         
