--- a/templates/asd.html
+++ b/templates/asd.html
@@ -129,9 +129,9 @@
                                         <td>{{ stuobjs.sem }}</td>
                                         <td>{{ stuobjs.sec }}</td>
                                         <td>
-                                            <a href="#" class="btn btn-simple btn-info btn-icon like"><i class="ti-heart">edit</i></a>
+                                            <!-- <a href="#" class="btn btn-simple btn-info btn-icon like"><i class="ti-heart">edit</i></a> -->
                                             <a href="/attendance/?id={{ stuobjs.id }}" class="btn btn-simple btn-warning btn-icon edit"><i class="ti-pencil-alt">View Attendance</i></a>
-                                            <a href="#" class="btn btn-simple btn-danger btn-icon remove"><i class="ti-close"></i></a>
+                                            <!-- <a href="#" class="btn btn-simple btn-danger btn-icon remove"><i class="ti-close"></i></a> -->
                                         </td>
                                     </tr>
                                     {% endfor %}
@@ -154,6 +154,7 @@
                 </div>
             </div>
 
+            <div _ngcontent-c10="" class="login-btn"><button _ngcontent-c10="" class="btn btn-outline-primary" onclick="location.href='/main/'" style="font-style: normal;color:rgb(180, 18, 18)80, 18, 18)">Back</button></button>
 
         </div>
     </div>
