--- a/templates/capture.html
+++ b/templates/capture.html
@@ -1,4 +1,9 @@
 {% extends 'base.html'%}
 {% block content  %}
+<p>Confidence</p>
+{{ conf }}
+<p>ID</p>
+{{ idss }}
+
 {{ successmsg }}
 {% endblock %}
