--- a/templates/main.html
+++ b/templates/main.html
@@ -13,23 +13,35 @@
                             </div>
                             <div class="col-xs-7">
                                 <div class="numbers" style="margin-top: 10%">
-                                    <p>Add Course</p>
+                                    <p>Add</p>
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
-                            <a href="/add_course">
+                            <a href="/addstudent" style="color:#7bd7bf">
                               <div class="panel-footer announcement-bottom">
                                 <div class="row">
                                   <div class="col-xs-6">
                                  
                                   </div>
                                   <div class="col-xs-6 text-right">
-                                    <i class="fa fa-arrow-circle-right">   Add ></i>
+                                    <i class="fa fa-arrow-circle-right">   Students ></i>
                                   </div>
                                 </div>
                               </div>
                             </a>
+                            <a href="/add_course/" style="color:#7bd7bf">
+                                <div class="panel-footer announcement-bottom">
+                                  <div class="row">
+                                    <div class="col-xs-6">
+                                   
+                                    </div>
+                                    <div class="col-xs-6 text-right">
+                                      <i class="fa fa-arrow-circle-right">   Lecturers ></i>
+                                    </div>
+                                  </div>
+                                </div>
+                              </a>
                         </div>
                     </div>
                 </div>
@@ -40,62 +52,76 @@
             <div class="row">
                 <div class="col-xs-5">
                     <div class="icon-big icon-warning text-center">
-                        <img style="width: 100px" src="{% static "a.png" %}" alt="Add Student"/>
-                    </div>
-                </div>
-                <div class="col-xs-7">
-                    <div class="numbers" style="margin-top: 10%">
-                        <p>Add Student</p>
-                    </div>
-                </div>
-            </div>
-            <div class="footer">
-                <a href="/addstudent/">
-                  <div class="panel-footer announcement-bottom">
-                    <div class="row">
-                      <div class="col-xs-6">
-                     
-                      </div>
-                      <div class="col-xs-6 text-right">
-                        <i class="fa fa-arrow-circle-right">   Add ></i>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>  <div class="col-lg-3 col-sm-6">
-    <div class="card">
-        <div class="content">
-            <div class="row">
-                <div class="col-xs-5">
-                    <div class="icon-big icon-warning text-center">
                         <img style="width: 100px" src="{% static "Train.png" %}" alt="Add Student"/>
                     </div>
                 </div>
                 <div class="col-xs-7">
                     <div class="numbers" style="margin-top: 10%">
-                        <p>Train</p>
+                        <p>Train Using LBPH</p>
                     </div>
                 </div>
             </div>
             <div class="footer">
-                <a href="/train/">
+                <a href="/train/" style="color:#7bd7bf">
                   <div class="panel-footer announcement-bottom">
                     <div class="row">
                       <div class="col-xs-6">
                      
                       </div>
                       <div class="col-xs-6 text-right">
-                        <i class="fa fa-arrow-circle-right">Train Data ></i>
+                        <i class="fa fa-arrow-circle-right">Students ></i>
                       </div>
                     </div>
                   </div>
                 </a>
+                <a href="/Lec/" style="color:#7bd7bf">
+                    <div class="panel-footer announcement-bottom">
+                      <div class="row">
+                        <div class="col-xs-6">
+                       
+                        </div>
+                        <div class="col-xs-6 text-right">
+                          <i class="fa fa-arrow-circle-right">Lecturers ></i>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
             </div>
         </div>
     </div>
+</div> 
+<div class="col-lg-3 col-sm-6">
+  <div class="card">
+      <div class="content">
+          <div class="row">
+              <div class="col-xs-5">
+                  <div class="icon-big icon-warning text-center">
+                      <img style="width: 100px" src="{% static "Train.png" %}" alt="Add Student"/>
+                  </div>
+              </div>
+              <div class="col-xs-7">
+                  <div class="numbers" style="margin-top: 10%">
+                      <p>Train using Eigen</p>
+                  </div>
+              </div>
+          </div>
+          <div class="footer">
+              <a href="/traineigen/" style="color:#7bd7bf">
+                <div class="panel-footer announcement-bottom">
+                  <div class="row">
+                    <div class="col-xs-6">
+                   
+                    </div>
+                    <div class="col-xs-6 text-right">
+                      <i class="fa fa-arrow-circle-right">Students ></i>
+                    </div>
+                  </div>
+                </div>
+              </a>
+             
+          </div>
+      </div>
+  </div>
 </div> 
 <div class="col-lg-3 col-sm-6">
     <div class="card">
@@ -108,19 +134,19 @@
                 </div>
                 <div class="col-xs-7">
                     <div class="numbers" style="margin-top: 10%">
-                        <p>rec</p>
+                        <p>Student Details</p>
                     </div>
                 </div>
             </div>
             <div class="footer">
-                <a href="/rec/">
+                <a href="/asd/" style="color:#7bd7bf">
                   <div class="panel-footer announcement-bottom">
                     <div class="row">
                       <div class="col-xs-6">
                      
                       </div>
                       <div class="col-xs-6 text-right">
-                        <i class="fa fa-arrow-circle-right">Rec ></i>
+                        <i class="fa fa-arrow-circle-right">View Attendance</i>
                       </div>
                     </div>
                   </div>
@@ -140,12 +166,12 @@
                     </div>
                     <div class="col-xs-7">
                         <div class="numbers" style="margin-top: 10%">
-                            <p>Taken Attendance</p>
+                            <p>Take Attendance</p>
                         </div>
                     </div>
                 </div>
                 <div class="footer">
-                    <a href="/takenatt/">
+                    <a href="/takenatt/" style="color:#7bd7bf">
                       <div class="panel-footer announcement-bottom">
                         <div class="row">
                           <div class="col-xs-6">
